# mario_clone

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build.sh  cmake_install.cmake  mario_clone  winbuild.ps1
src/: definitions.hpp  events.cpp  game.cpp  game.hpp  main.cpp  platform.cpp  player.cpp  render.cpp  tilebox.cpp  update.cpp  utilities.cpp  utilities.hpp
